# striboh

./: .gitignore  .gitmodules  CMakeLists.txt  CNAME  LICENSE  README.md  _config.yml  conanfile.txt  configure.py  index.md  striboh.files  workspace.code-workspace
doxygen/: CMakeLists.txt  Doxyfile.in
src/main/angular/striboh/: README.md  angular.json  package-lock.json  package.json  tsconfig.json
src/main/angular/striboh/projects/ng-striboh/: README.md  karma.conf.js  ng-package.json  package.json
src/main/angular/striboh/projects/ng-striboh/src/: public-api.ts
src/main/angular/striboh/projects/ng-striboh/src/lib/: ng-striboh.component.spec.ts  ng-striboh.component.ts  ng-striboh.module.ts  ng-striboh.service.spec.ts  ng-striboh.service.ts
src/main/cpp/: .gitignore
src/main/cpp/darboh/: CMakeLists.txt  darbohAstNode.cpp  darbohAstNode.hpp  darbohAstNodeImport.hpp  darbohAstNodeRoot.cpp  darbohAstNodeRoot.hpp  darbohParser.cpp  darbohParser.hpp  darboh_main.cpp
src/main/cpp/striboh/: CMakeLists.txt  MessagePacker.cpp  MessagePacker.hpp  beast_http_server.cpp  stribohBase.hpp  stribohBaseAddress.cpp  stribohBaseAddress.hpp  stribohBaseBeastServer.cpp  stribohBaseBeastServer.hpp  stribohBaseBroker.cpp  stribohBaseBroker.hpp  stribohBaseBrokerIface.cpp  stribohBaseBrokerIface.hpp  stribohBaseBuffer.cpp  stribohBaseBuffer.hpp  stribohBaseClient.cpp  stribohBaseClient.hpp  stribohBaseEBrokerState.hpp  stribohBaseEInvocationType.cpp  stribohBaseEInvocationType.hpp  stribohBaseEMessageParsingError.hpp  stribohBaseEMessageType.hpp  stribohBaseEServerState.hpp  stribohBaseExceptionInMessageParser.cpp  stribohBaseExceptionInMessageParser.hpp  stribohBaseExceptionsFileNotFound.cpp  stribohBaseExceptionsFileNotFound.hpp  stribohBaseExceptionsInMessageParserError.cpp  stribohBaseExceptionsInMessageParserError.hpp  stribohBaseExceptionsWrongAdress.hpp  stribohBaseHoldInterface.cpp  stribohBaseHoldInterface.hpp  stribohBaseHoldMethod.cpp  stribohBaseHoldMethod.hpp  stribohBaseHoldParameters.cpp  stribohBaseHoldParameters.hpp  stribohBaseInstanceId.hpp  stribohBaseInterface.cpp  stribohBaseInterface.hpp  stribohBaseInterfaceName.cpp  (+95 more)
src/test/: TODO.md
src/test/angular/: CMakeLists.txt  NgServer.striboh.idl  striboh_ng_server.cpp
src/test/angular/ng-hello-world/: .gitignore  README.md  angular.json  karma.conf.js  package-lock.json  package.json
src/test/angular/ng-hello-world/e2e/src/: app.e2e-spec.ts
src/test/angular/ng-hello-world/src/app/: app.component.html  app.component.spec.ts  app.component.ts  app.module.ts
src/test/angular/ng-hello-world/src/app/hello/: hello.component.html  hello.component.styl  hello.component.ts
src/test/angular/ng-hello-world/src/app/ng-striboh-clt/: ng-striboh-clt.component.html  ng-striboh-clt.component.spec.ts  ng-striboh-clt.component.styl  ng-striboh-clt.component.ts
src/test/angular/ng-hello-world/src/app/org/striboh/: hello.service.ts
src/test/cpp/: CMakeLists.txt  darboh_test_preprocessor.cpp  in.striboh_build_constants.hpp  striboh_base_tests.cpp  striboh_broker_tests.cpp  striboh_idl_tests.cpp  striboh_message_tests.cpp  striboh_test_address.cpp  striboh_test_echo_server.cpp  striboh_test_echo_server_common.hpp  striboh_test_utils.cpp  striboh_test_utils.hpp
src/test/echo/: CMakeLists.txt  Echo.striboh.idl  striboh_generated_echo_server.cpp  striboh_generated_echo_tests.cpp
src/test/js/: .gitignore  package.json  retval200.ts  striboh_test_echo_client.js  striboh_test_echo_client1.js  striboh_test_echo_client1.ts  tsconfig.json
src/test/react/striboh-gl-react/: README.md  package-lock.json  package.json  webpack.config.js
src/test/react/striboh-react-webgl/: .gitignore  package-lock.json  package.json
src/test/react/striboh-react-webgl/src/: App.tsx
src/test/react/striboh-react-webgl/src/glediator/: Glediator.css  Glediator.tsx  GlediatorCtx.ts
src/test/striboh.idl/: test_file_00.striboh.idl  test_file_01.striboh.idl
