
message(STATUS "Striboh conan libs: ${CONAN_LIBS}.")

add_library(striboh_idl STATIC stribohIdlParser.cpp stribohIdlParser.hpp stribohIdlAstRootNode.cpp stribohIdlAstRootNode.hpp stribohIdlAstBaseNode.hpp stribohIdlAstModuleNode.cpp stribohIdlAstModuleNode.hpp stribohIdlAstIdentifierNode.hpp stribohIdlAstImportListNode.hpp stribohIdlAstMethodNode.hpp stribohIdlAstTypeNode.hpp stribohIdlAstEBuildinTypes.hpp stribohIdlAstTypedIdentifierNode.hpp stribohIdlAstNode.hpp stribohIdlAstBaseNode.cpp stribohIdlAstImportListNode.cpp stribohIdlAstMethodNode.cpp stribohIdlAstModuleListNode.cpp stribohIdlAstTypedIdentifierNode.cpp stribohIdlAstImportNode.hpp stribohIdlAstImportNode.cpp stribohIdlAstTypeNode.cpp stribohIdlAstIdentifierNode.cpp stribohIdlAstInterfaceListNode.cpp stribohIdlAstInterfaceListNode.hpp stribohIdlAstModuleBodyNode.cpp stribohIdlAstModuleBodyNode.hpp stribohIdlAstInterfaceNode.cpp stribohIdlAstInterfaceNode.hpp)
add_library(striboh_base STATIC stribohBroker.cpp stribohBaseTransportByWebSockets.cpp stribohBaseTransportByWebSockets.hpp stribohBroker.cpp stribohBroker.hpp stribohBaseTransportIFace.cpp stribohBaseTransportIFace.hpp stribohBaseTransportInProcess.cpp stribohBaseTransportInProcess.hpp stribohBaseMessage.cpp stribohBaseMessage.hpp stribohBaseHoldInterface.cpp stribohBaseHoldInterface.hpp stribohBaseHoldMethod.cpp stribohBaseHoldMethod.hpp stribohBaseHoldParameters.cpp stribohBaseHoldParameters.hpp)
add_executable(striboh_idl_compiler stribohIdlCompiler_main.cpp)
target_link_libraries(striboh_idl_compiler striboh_idl boost_program_options boost_log boost_filesystem boost_system boost_thread pthread)
